# davana-core-api

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  source-env.sh
davana_core/: asgi.py  env.py  middleware.py  settings.py  urls.py  v1_urls.py  wsgi.py
sellers/: admin.py  models.py  serializers.py  tests.py  views.py
sellers/migrations/: 0001_initial.py  0002_initial.py  0003_district_and_town.py
users/: admin.py  districts.py  models.py
users/migrations/: 0001_initial.py
vehicles/: admin.py  admin_forms.py  feature_groups.py  filter_params.py  filters.py  make_options.py  mixins.py  model_options.py  models.py  pagination.py  serializers.py  short_id.py  suggestions.py  term_parser.py  tests.py  views.py  widgets.py
vehicles/migrations/: 0001_initial.py  0002_vehicle_title_suffix_and_more.py  0003_district_and_town.py  0004_vehicle_photo_title.py  0005_vehicle_feature_list.py  0006_vehicle_exterior_features.py  0007_add_vehicle_activity.py
vehicles/static/vehicles/: admin_vehicle_form.css
vehicles/templates/vehicles/widgets/: datalist_text.html  grid_checkbox_select.html
